fix(ais): avoid grid to overlap the parent

--- a/src/Angular InstantSearch/src/styles.scss
+++ b/src/Angular InstantSearch/src/styles.scss
@@ -18,7 +18,7 @@ em { background: cyan; font-style: normal }
 
 .ais-Hits {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 47.5% 47.5%;
   grid-gap: 5%;
   margin-bottom: 1em;
 }
